--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<a routerLink="/create">New Article</a><br>
-<a routerLink="/articles">Articles</a><br>
-<a routerLink="/top10">TOP10</a><br>
+<a style="font-size: 24pt; " routerLink="/create">New Article</a><br>
+<a style="font-size: 24pt; " routerLink="/articles">Articles</a><br>
+<a style="font-size: 24pt; " routerLink="/top10">TOP10</a><br>
 
 <router-outlet></router-outlet>
