--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<a style="width:130px" routerLink="/create">New Article</a><br>
-<a style="width:130px" routerLink="/articles">Articles</a><br>
-<a style="width:130px" routerLink="/top10">TOP10</a><br>
+<a style="width:130px; padding: 10px 50px 20px;" routerLink="/create">New Article</a><br>
+<a style="width:130px; padding: 10px 50px 20px;" routerLink="/articles">Articles</a><br>
+<a style="width:130px; padding: 10px 50px 20px;" routerLink="/top10">TOP10</a><br>
 
 <router-outlet></router-outlet>
