--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,3 +1,3 @@
 
-<input style="width:130px" (input)="search($event)" (ngModelChange)="search" type="text"  placeholder="Recherche">
+<input style="width:130px; padding: 30px 50px 30px;" (input)="search($event)" (ngModelChange)="search" type="text"  placeholder="Recherche">
 <app-article *ngFor="let article of this.articles" [article]="article" (deletedArticle)="delete($event)"></app-article>
